--- a/public/chat.html
+++ b/public/chat.html
@@ -2,7 +2,7 @@
 <htm>
 <head>
     <title>Chat App</title>
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
