--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <htm>
 <head>
     <title>Chat App</title>
-    <link rel="icon" href="img/favicon.png">
-    <link rel="stylesheet" type="image/png" href="css/styles.min.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
    <div class="centered-form">
